--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Кава для бізнесу</title>
 
 
@@ -21,48 +22,48 @@
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
     <header class="header">
         <div class="header__up">
-            <div class="header__wrapper container text-center">
-                <div class="row">
-                    <div class="header__item col">
+            <div class="header__wrapper container text-left">
+                <div class="row ">
+                    <div class="header__item col ">
                         <ul>
                             <!-- <li class="telephone">Харків </li> -->
-                            <a class="telephone" href="tel:+380960542770">ХАРКІВ +38(096)-0542770 </a>
-                            <a class="telephone" href="tel:+380935475572">+38(093)-5475572 </a>
+                            <a class="telephone text-nowrap" href="tel:+380960542770">ХАРКІВ (096) 054-27-70 </a>
+                            <a class="telephone text-nowrap" href="tel:+380935475572">(093) 547-55-72 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">КИЇВ</li>
-                            <a class="telephone" href="tel:+380660227720">+38(066)-0227720 </a>
+                            <a class="telephone text-nowrap" href="tel:+380660227720">(066) 022-77-20 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone">БРОВАРИ, БОРИСПІЛЬ</li>
-                            <a class="telephone" href="tel:+380989700921">+38(098)-9700921 </a>
+                            <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
+                            <a class="telephone text-nowrap" href="tel:+380989700921">(098) 970-09-21 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone">БІЛА ЦЕРКВА</li>
-                            <a class="telephone" href="tel:+380504400492">+38(050)-4400492 </a>
+                            <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
+                            <a class="telephone text-nowrap" href="tel:+380504400492">(050) 440-04-92 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
-                            <a class="telephone" href="tel:+380989700929">+38(098)-9700929 </a>
+                            <a class="telephone text-nowrap" href="tel:+380989700929">(098) 970-09-29 </a>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
-                            <a class="telephone" href="tel:+380950252822">+38(095)-0252822 </a>
+                            <a class="telephone text-nowrap" href="tel:+380950252822">(095) 025-28-22 </a>
                         </ul>
                     </div>
 
@@ -71,7 +72,6 @@
                     </div>
 
                 </div>
-
             </div>
         </div>
         <div class="header__bottom">
@@ -173,7 +173,7 @@
 
     <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
 
-    <section class="main-text">
+    <section class="main-text mb-4">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -248,24 +248,24 @@
 
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
 
-    <!-- <section class="images">
+    <section class="images mb-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-1">
                     <div class="image">
                         <a href="#"><img src="./img/horeca.jpg" class="card-img-top" alt="horeca"></a>
                         <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-1">
                     <div class="image">
                         <img src="./img/classic.jpg" class="card-img-top" alt="horeca">
                         <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-1">
                     <div class="image">
                         <img src="./img/vending.jpg" class="card-img-top" alt="horeca">
                         <div class="bottom-left">ВЕНДІНГ</div>
@@ -273,10 +273,10 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
-    <section class="consultation">
+    <section class="consultation mb-4">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -309,24 +309,24 @@
     </section>
 
     <!-- /////////////////////////////////////////   SocialNet    ////////////////////////////////////////     -->
-    <section class="socialnet">
+    <section class="socialnet mb-4">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>INSTAGRAM</h3>
                         <img src="./img/instagram.png" alt="logo_instagram">
                         <button class="btn btn-instagram">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>FACEBOOK</h3>
                         <img src="./img/facebook.png" alt="logo_facebook">
                         <button class="btn btn-facebook">ПІДПИСАТИСЯ</button>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>TELEGRAM</h3>
                         <img src="./img/telegram.png" alt="logo_telegram">
@@ -342,27 +342,27 @@
         <h3>НАШІ ПАРТНЕРИ</h3>
     </div>
 
-    <section class="partners">
+    <section class="partners mb-4">
         <div class="container text-center">
             <div class="row g-0">
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner1-1.png" alt="logo_instagram">
+                        <img src="./img/partner1-1.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner1-2.png" alt="logo_facebook">
+                        <img src="./img/partner1-2.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner2-1.png" alt="logo_instagram">
+                        <img src="./img/partner2-1.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner2-2.png" alt="logo_facebook">
+                        <img src="./img/partner2-2.png" alt="partner">
                     </div>
                 </div>
             </div>
@@ -370,22 +370,22 @@
             <div class="row g-0">
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner3-1.png" alt="logo_instagram">
+                        <img src="./img/partner3-1.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner3-2.png" alt="logo_facebook">
+                        <img src="./img/partner3-2.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner4-1.png" alt="logo_instagram">
+                        <img src="./img/partner4-1.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner4-2.png" alt="logo_facebook">
+                        <img src="./img/partner4-2.png" alt="partner">
                     </div>
                 </div>
             </div>
@@ -393,22 +393,22 @@
             <div class="row">
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner5-1.png" alt="logo_instagram">
+                        <img src="./img/partner5-1.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner5-2.png" alt="logo_instagram">
+                        <img src="./img/partner5-2.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner5-3.png" alt="logo_instagram">
+                        <img src="./img/partner5-3.png" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/partner5-4.png" alt="logo_instagram">
+                        <img src="./img/partner5-4.png" alt="partner">
                     </div>
                 </div>
             </div>
@@ -430,16 +430,16 @@
                             <div class="col footer-left">
                                 <h6>Харків</h6>
                                 <p>
-                                    т. +38 0960542770
+                                    т. +38 (096) 054-27-70
                                 </p>
                                 <p>
-                                    т. +38 0960542770
+                                    т. +38 (093) 547-55-72
                                 </p>
                             </div>
                             <div class="col footer-left">
                                 <h6>Київ</h6>
                                 <p>
-                                    т. +38 0660227720
+                                    т. +38 (066) 022-77-20
                                 </p>
                             </div>
                         </div>
@@ -448,16 +448,13 @@
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
                                 <p>
-                                    т. +38 0960542770
-                                </p>
-                                <p>
-                                    т. +38 0960542770
+                                    т. +38 (050) 440-04-92
                                 </p>
                             </div>
                             <div class="col footer-left">
                                 <h6>Бровари, Бориспіль</h6>
                                 <p>
-                                    т. +38 0660227720
+                                    т. +38 (098) 970-09-21
                                 </p>
                             </div>
                         </div>
@@ -466,10 +463,7 @@
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
                                 <p>
-                                    т. +38 0960542770
-                                </p>
-                                <p>
-                                    т. +38 0960542770
+                                    т. +38 (098) 970-09-29
                                 </p>
                             </div>
                         </div>
@@ -478,10 +472,7 @@
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <p>
-                                    т. +38 0960542770
-                                </p>
-                                <p>
-                                    т. +38 0960542770
+                                    vend.coffee@bianchiprof.com
                                 </p>
                             </div>
                         </div>
@@ -504,7 +495,7 @@
 
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            +38 0950252822
+                            +38 (095) 025-28-22
                         </p>
                         <p>
                             vend.coffee@bianchiprof.com
