--- a/index.html
+++ b/index.html
@@ -157,15 +157,11 @@
 
     <div class="fullscreen-bg">
         <div class="overlay">
-            <!-- <p>
-                Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
-                здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
-                задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
-                впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
-            </p> -->
         </div>
         <video loop muted autoplay class="fullscreen-bg__video">
-            <source src="video/2.mp4" type="video/mp4">
+            <source src="video/video.ogv" type="video/ogg">
+            <source src="video/video.mp4" type="video/mp4">
+            <source src="video/video.webm" type="video/webm">
             <div class="bottom-left">
 
             </div>
@@ -284,11 +280,14 @@
                     <img src="./img/cap.png" alt="cap">
                 </div>
                 <div class="col">
-                    <form>
+                    <form class="needs-validation">
                         <h4>Безкоштовна консультація нашого спеціаліста</h4>
                         <div class="mb-3">
                             <input type="text" class="form-control" id="validationName" placeholder="Ваше Ім'я"
                                 required>
+                            <div class="invalid-tooltip">
+                                Укажите имя пользователя!
+                            </div>
                         </div>
                         <div class="mb-3">
                             <input type="text" class="form-control validationTelephone tel" id="validationTelephone"
@@ -315,6 +314,10 @@
                         </div>
 
                         <button type="submit" class="btn send-request">Залишити заявку</button>
+                        <div class="popup">
+                            <span class="popuptext" id="popupSelector"></span>
+                        </div>
+                        
                     </form>
                 </div>
             </div>
@@ -442,37 +445,37 @@
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Харків</h6>
-                                <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
                             <div class="col footer-left">
                                 <h6>Київ</h6>
-                                <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
-                                <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
+                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
                                 <h6>Бровари, Бориспіль</h6>
-                                <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
-                                <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
-                                <a class="telephone text-nowrap"
+                                <a class="telephone"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div>
@@ -495,10 +498,10 @@
 
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
-                            <a class="telephone text-nowrap"
+                            <a class="telephone"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
 
@@ -557,12 +560,17 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
                         <button type="submit" class="btn send-request-modal">Відправити</button>
+                        <div class="popup">
+                            <span class="popuptext" id="popupSelectorModal"></span>
+                        </div>
                     </div>
                 </form>
 
             </div>
         </div>
     </div>
+
+
 
     <!-- <script src="./bootstrap/bootstrap.bundle.min.js"></script> -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
