--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -511,8 +511,7 @@
                 </div>
             </div>
         </div>
-
-        <div class="separator">
+    <div class="separator">
             <h7>© 2016-2022 Bianchi professional</h7>
         </div>
     </footer>
@@ -523,7 +522,7 @@
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form action="">
+                <form>
                     <div class="modal-header">
                         <h4 class="modal-title" id="exampleModalLabel">Безкоштовна консультація нашого спеціаліста</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
