--- a/index.html
+++ b/index.html
@@ -282,34 +282,22 @@
                     <form class="needs-validation" novalidate>
                         <h4>Безкоштовна консультація нашого спеціаліста</h4>
                         <div class="mb-3">
-                            <!-- <div class="popup">
-                                <span class="popuptext" id="validationNamePopup"></span>
-                            </div> -->
-                            <input type="text" class="form-control" id="validationName" placeholder="Ваше Ім'я"
+                            <input type="text" name="userName" class="form-control" id="validationName" placeholder="Ваше Ім'я" minlength="2"
                                 required>
                         </div>
                         <div class="mb-3">
-                            <!-- <div class="popup">
-                                <span class="popuptext" id="validationTelephonePopup"></span>
-                            </div> -->
-                            <input type="text" class="form-control validationTelephone tel" id="validationTelephone"
+                            <input type="text" name="telephone" class="form-control validationTelephone tel" id="validationTelephone"  minlength="18"
                                 placeholder="Телефон" required>
                         </div>
                         <div class="mb-3">
-                            <!-- <div class="popup">
-                                <span class="popuptext" id="validationDirectionPopup"></span>
-                            </div> -->
-                            <select class="form-select validationDirection" id="validationDirection" required>
+                            <select name="direction" class="form-select validationDirection" id="validationDirection" required>
                                 <option selected disabled value="">Мене цікавить...</option>
                                 <option>Кавомашина для кафе або торгової точки</option>
                                 <option>Торговий автомат з кавою або снеками</option>
                             </select>
                         </div>
                         <div class="mb-3">
-                            <!-- <div class="popup">
-                                <span class="popuptext" id="validationCityPopup"></span>
-                            </div> -->
-                            <select class="form-select validationCity" id="validationCity" required>
+                            <select name="city" class="form-select validationCity" id="validationCity" required>
                                 <option selected disabled value="">Ваше місто...</option>
                                 <option>Харків</option>
                                 <option>Київ</option>
@@ -320,8 +308,7 @@
                                 <option>Інше місто</option>
                             </select>
                         </div>
-                        
-                        <button class="btn send-request">Залишити заявку</button>        
+                        <button name="sendRequest" class="btn send-request">Залишити заявку</button>        
                     </form>
                 </div>
             </div>
@@ -525,29 +512,29 @@
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form>
+                <form novalidate>
                     <div class="modal-header">
                         <h4 class="modal-title" id="exampleModalLabel">Безкоштовна консультація нашого спеціаліста</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                     </div>
                     <div class="modal-body">
                         <div class="mb-3">
-                            <input type="text" class="form-control" id="validationNameModal" placeholder="Ваше Ім'я"
+                            <input type="text" name="userNameModal" class="form-control" id="validationNameModal" minlength="2" placeholder="Ваше Ім'я"
                                 required>
                         </div>
                         <div class="mb-3">
-                            <input type="text" class="form-control tel" id="validationTelephoneModal"
+                            <input type="text" name="telephoneModal" class="form-control tel" id="validationTelephoneModal" minlength="18" maxlength="18"
                                 placeholder="Телефон" required>
                         </div>
                         <div class="mb-3">
-                            <select class="form-select validationDirection" id="validationDirectionModal" required>
+                            <select class="form-select validationDirection" name="directionModal" id="validationDirectionModal" required>
                                 <option selected disabled value="">Мене цікавить...</option>
                                 <option>Кавомашина для кафе або торгової точки</option>
                                 <option>Торговий автомат з кавою або снеками</option>
                             </select>
                         </div>
                         <div class="mb-3">
-                            <select class="form-select" id="validationCityModal" required>
+                            <select class="form-select" name="cityModal" id="validationCityModal" required>
                                 <option selected disabled value="">Ваше місто...</option>
                                 <option>Харків</option>
                                 <option>Київ</option>
@@ -563,7 +550,7 @@
                     <div class="modal-footer">
                         
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
-                        <button class="btn send-request-modal">Відправити</button>
+                        <button name="sendRequestModal" lass="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
 
@@ -573,7 +560,7 @@
 
     <!-- <script src="./bootstrap/bootstrap.bundle.min.js"></script> -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
     <script src="/js/boundle.js"></script>
 </body>
 
