--- a/dlya_magazinov_i_setey.html
+++ b/dlya_magazinov_i_setey.html
@@ -282,7 +282,7 @@
     
     
         <div class="separator">
-            <h7>© 2016-2022 Bianchi professional</h7>
+            <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
 
@@ -299,11 +299,11 @@
                     </div>
                     <div class="modal-body">
                         <div class="mb-3">
-                            <input type="text" name="userNameModal" class="form-control" id="validationNameModal" minlength="2" placeholder="Ваше Ім'я"
+                            <input type="text" name="userNameModal" class="form-control" id="validationNameModal" placeholder="Ваше Ім'я"
                                 required>
                         </div>
                         <div class="mb-3">
-                            <input type="text" name="telephoneModal" class="form-control tel" id="validationTelephoneModal" minlength="18" maxlength="18"
+                            <input type="text" name="telephoneModal" class="form-control tel" id="validationTelephoneModal"
                                 placeholder="Телефон" required>
                         </div>
                         <div class="mb-3">
