--- a/dlya_magazinov_i_setey.html
+++ b/dlya_magazinov_i_setey.html
@@ -172,28 +172,28 @@
                         <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2004">
                             <div class="inner-circle"></div>
                             <p class="h6 mt-3 mb-1">Оформлення</p>
-                            <p class="h6 text-muted mb-0 mb-lg-0">Launched Trello</p>
+                            <p class="h6 text-muted mb-0 mb-lg-0">Залиште заявку на нашому сайті по телефону чи електронній пошті</p>
                         </div>
                     </div>
                     <div class="timeline-step">
                         <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2005">
                             <div class="inner-circle"></div>
                             <p class="h6 mt-3 mb-1">Підтвердження</p>
-                            <p class="h6 text-muted mb-0 mb-lg-0">Launched Messanger</p>
+                            <p class="h6 text-muted mb-0 mb-lg-0">Наш менеджер зв'яжеться з Вами та підготує для Вас найвігіднішу пропозицію, виходячи з ваших потреб.</p>
                         </div>
                     </div>
                     <div class="timeline-step">
                         <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2010">
                             <div class="inner-circle"></div>
                             <p class="h6 mt-3 mb-1">Встановлювання</p>
-                            <p class="h6 text-muted mb-0 mb-lg-0">Open New Branch</p>
+                            <p class="h6 text-muted mb-0 mb-lg-0">Ми в короткий термін встановимо кавомашину у Вашому закладі.</p>
                         </div>
                     </div>
                     <div class="timeline-step mb-0">
                         <div class="timeline-content" data-toggle="popover" data-trigger="hover" data-placement="top" title="" data-content="And here's some amazing content. It's very engaging. Right?" data-original-title="2020">
                             <div class="inner-circle"></div>
                             <p class="h6 mt-3 mb-1">Обслуговування</p>
-                            <p class="h6 text-muted mb-0 mb-lg-0">In Fortune 500</p>
+                            <p class="h6 text-muted mb-0 mb-lg-0">Повний супровід та безкоштовна технична підримка протягом усього співробітництва.</p>
                         </div>
                     </div>
                 </div>
