--- a/dlya_magazinov_i_setey.html
+++ b/dlya_magazinov_i_setey.html
@@ -156,6 +156,56 @@
         <h3>Для магазинів і торгівельних мереж</h3>
     </div>
 
+    <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
+
+    <section class="icons">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="/img/dlya_magazinov_i_setey/chashka.png" class="card-img-top" alt="icon">
+                        <div class="card-body">
+                            <p class="card-text">Наша кава виготовлена на ультрасучасних кавових фабриках Італії та
+                                Голандії (ICS) із застосуванням найкращого обладнання та професійних знань
+                                висококлассних світових спеціалістів. Богатство смаку і аромату, відбірні зерна і
+                                ідеально відточені рецепти блендів - основні відмінні особливості нової лінійки кави
+                                Bianchi</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="./img/dlya_magazinov_i_setey/kofe zel.png" class="card-img-top" alt="icon">
+                        <div class="card-body">
+                            <p class="card-text">Ми пропонуємо весь модельний ряд кавових машин для приготування кави
+                                від провідних виробників Європи: WMF (Німеччина), Bianchi (Італія), Carimali (Італія),
+                                Franke (Швейцарія), починая від простих кавомашин до суперавтоматів. Напої, виготовлені
+                                на цьому обладнанні, мають неповторний смак і високу якість, які підтверджують
+                                авторитетні спеціалісти кавової галузі.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card text-center">
+                        <img src="./img/dlya_magazinov_i_setey/servis_salat.png" class="card-img-top" alt="icon">
+                        <div class="card-body">
+                            <p class="card-text">Наші менеджери пропонують індивідуальні умови співпраці для кожного
+                                клієнта. Своєчасна доставка продуктів і якісне сервісне обслуговування обладнання
+                                вигідно відрізняють нас на ринку кавових послуг. Ми робимо обслуговування обладнання у
+                                власних сервісних центрах.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="separator">
+        <h3>Що потрібно для співпраці</h3>
+    </div>
+
     <div class="container">                      
        
         <div class="row">
