--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <div class="modal-footer">
 
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
-                        <button name="sendRequestModal" lass="btn send-request-modal">Відправити</button>
+                        <button name="sendRequestModal" class="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
 
@@ -562,7 +562,6 @@
         </div>
     </div>
 
-    <!-- <script src="./bootstrap/bootstrap.bundle.min.js"></script> -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
     <script src="/js/boundle.js"></script>
